--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@willsoto/nestjs-prometheus": "^6.0.1",
     "mongoose": "^8.4.3",
     "node-fetch": "^3.3.2",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
