--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "@willsoto/nestjs-prometheus": "^6.0.1",
     "mongoose": "^8.4.3",
     "node-fetch": "^3.3.2",
     "prom-client": "^15.1.3",
+    "redoc-express": "^2.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
